--- a/Debug/makefile
+++ b/Debug/makefile
@@ -60,7 +60,7 @@ main-build: self_balancing_platform1.elf secondary-outputs
 
 # Tool invocations
 self_balancing_platform1.elf self_balancing_platform1.map: $(OBJS) $(USER_OBJS) C:\Users\Keegan\STM32CubeIDE\workspace_1.17.0\self_balancing_platform1\STM32L552ZETXQ_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "self_balancing_platform1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m33 -T"C:\Users\Keegan\STM32CubeIDE\workspace_1.17.0\self_balancing_platform1\STM32L552ZETXQ_FLASH.ld" --specs=nosys.specs -Wl,-Map="self_balancing_platform1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "self_balancing_platform1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m33 -T"C:\Users\Keegan\STM32CubeIDE\workspace_1.17.0\self_balancing_platform1\STM32L552ZETXQ_FLASH.ld" --specs=nosys.specs -Wl,-Map="self_balancing_platform1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
